	 - Bug fixed a crash in EDL Edit window when dropping a clip onto
	   a new track.
	 - Removed the message of already created OCIO transform as it was
	   too verbose.
	 - Bug fixed a playback hanging when in EDL mode, after stopping
	   a short sequence or movie file and continuing it later on.  The
	   playback would not continue to the next image in the sequence.

v4.0.9   - A bug fix release to playback of movies with sound in loop, which
	   was crashing v4.0.6 and later.
	 - Bug fixed pixel ratio not being correct and being applied twice.

v4.0.8   - Made HEVC saver report a HVC1 fourcc so that Apple products will
	   recognize them and show a thumbnail.
	 - Made Z Depth be reported as "Z" only, as that makes it work on
	   different languages when saving EXRs.
	 - Bug fixed Z channel selection being chosen as Color.
	 - Made OIIO iff saver save only up to 16-bits, as float is not
	   supported.  Note that OIIO's IFF saver does not support Z channel.
	 - Added --stereo-input flag to command-line.  It works just like
	   --stereo-output flag but for the stereo input.
	 - Bug fixed X and Y flips which got broken in a previous build.
	 - Bug fixed pixel aspect ratio being applied twice.

v4.0.7   - Added support for libraw in oiiotool on Windows.  This allows us
	   to support dng, cr2, etc. formats.
	 - Added oiiotool to Linux distribution.
	 - Added support for ffmpeg in oiiotool.  This allows using
	   oiiotool for ffmpeg input formats to extract single frames and
	   process them.
	 - Added --stereo-output flag to command line.  This controls the
	   stereo output setting when loading a stereo set of images.
	   Options are: Left view, Right view, Top/bottom, Bottom/top,
	   	   	Left/right, Right/left, Even/odd rows,
			Even/odd columns, Checkerboard pattern,
			Red/cyan glasses, Cyan/red glasses.
	 - Reverted the change to timecode/timeline accepting view shortcuts
	   as it was causing conflict with the presentation mode.